--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -179,6 +179,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        font-size: 14px;
         & > div {
 
         }
@@ -230,20 +231,21 @@
         height: 44px;
         color: #000;
         background: #fff;
+        font-size: 14px;
         &-sel, &:hover {
             background: #00a082;
             color: #fff;
         }
     }
     &-shadow {
-        box-shadow: 0 0 5px 0 rgba(0,0,0,.15);
+        box-shadow: 0 0 2px 1px rgba(0,0,0,.1);
         border-radius: 10px;
         cursor: pointer;
         &:hover {
             background: rgb(250,250,250);
         }
         &-main {
-            box-shadow: 0 1px 2px rgba(0,0,0,.1);
+            box-shadow: 0 1px 1px rgba(0,0,0,.1);
             position: relative;
         }
     }
