--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -294,9 +294,8 @@
     max-height: 350px;
     position: relative;
     overflow: hidden;
-    border-radius: 10px 10px 20px 20px;
-    margin-top: -15px;
-    box-shadow: 0 0 0 10px #fff;
+    border-radius: 10px;
+    margin-top: -20px;
     & > img {
         width: 100%;
     }
