--- a/public/css/entity.css
+++ b/public/css/entity.css
@@ -264,6 +264,10 @@
     cursor: pointer;
 }
 @media only screen and (max-width: 768px) {
+    .entity-filter {
+        margin-right: 5px;
+        border-radius: 0;
+    }
     .entity-block-item-input-double-block-switcher {
         width: 40px;
     }
