--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -9,11 +9,31 @@
     transition: all 0.5s ease;
     overflow: auto;
 }
+.modal-table {
+    background: #57a283;
+    padding: 10px 20px 10px 20px;
+    color: #fff !important;
+    border-radius: 5px;
+}
+.modal-table-title {
+    font-size: 16px;
+    font-weight: bold;
+}
+.modal-table-price {
+    font-size: 14px;
+}
 .modal-calendar {
     border: none;
     background: transparent;
     border-radius: 0;
     width: 100%;
+}
+.modal-calendar-green {
+    border-radius: 5px;
+}
+.modal-calendar-bg {
+    background: rgb(245,245,245);
+    border-radius: 5px;
 }
 .modal-photo, .modal-photo-view {
     min-height: 200px;
@@ -23,7 +43,6 @@
 .modal-photo-view > img {
     display: block;
 }
-
 .modal-hidden {
     display: none;
 }
@@ -105,7 +124,7 @@
 }
 .modal-input > div {
     font-size: 16px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     color: grey;
 }
 
@@ -117,6 +136,7 @@
     height: 35px;
     width: 100%;
     padding: 0 10px 0 10px;
+    margin-bottom: 10px;
     outline: none;
 }
 
@@ -179,6 +199,15 @@
     transform: scale(1.1);
 }
 @media only screen and (max-width: 768px) {
+    .modal-table {
+        padding: 10px;
+    }
+    .modal-table-title {
+        font-size: 12px;
+    }
+    .modal-table-price {
+        font-size: 11px;
+    }
     .modal-mask {
 
     }
