--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -236,6 +236,10 @@
     .dashboard-table-value {
         font-size: 8px;
     }
+    .dashboard-table-buttons {
+        padding: 10px;
+        gap: 5px;
+    }
     .dashboard-table-button {
         height: 26px;
         font-size: 9px;
